Fix text alignment on countdown

--- a/src/static/stylesheets/base.scss
+++ b/src/static/stylesheets/base.scss
@@ -203,7 +203,7 @@ body,
   flex-direction: column;
   max-width: 100vw;
   min-height: 100%;
-  overscroll-behavior-y: none;
+  //overscroll-behavior-y: none;
   width: 100%;
   z-index: 1;
 
